--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,9 +76,11 @@ dependencies {
     //Firebase
     implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.google.firebase:firebase-inappmessaging-display:17.0.5'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.firebase:firebase-database:16.0.6'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
+    implementation 'com.google.firebase:firebase-functions:16.1.3'
 
     // Navigation
     implementation 'android.arch.navigation:navigation-fragment-ktx:' + navigationVersion
